server/aws/ar-stack-grafana.yml
Resources:
  ARServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-08116b9957a259459
      KeyName: AR_Server_PEM
      SecurityGroupIds:
        - !Ref ARServerSG
      UserData: !Base64 | 
        #!/bin/bash
        sudo apt-get update
        sudo apt-get install -y apt-transport-https software-properties-common wget
        sudo mkdir -p /etc/apt/keyrings/
        sudo wget -q -O - https://apt.grafana.com/gpg.key | gpg --dearmor | sudo tee /etc/apt/keyrings/grafana.gpg > /dev/null

        echo "deb [signed-by=/etc/apt/keyrings/grafana.gpg] https://apt.grafana.com stable main" | sudo tee -a /etc/apt/sources.list.d/grafana.list
        echo "deb [signed-by=/etc/apt/keyrings/grafana.gpg] https://apt.grafana.com beta main" | sudo tee -a /etc/apt/sources.list.d/grafana.list
        # Updates the list of available packages
        sudo apt-get update
        # Installs the latest OSS release:
        sudo apt-get install grafana

        # Installs the latest Enterprise release:
        #sudo apt-get install grafana-enterprise

        sudo grafana-server -v
        sudo systemctl start grafana-server
        sudo systemctl enable grafana-server
        sudo ufw enable
        sudo ufw allow ssh
        sudo ufw allow 3000/tcp


      Tags:
        - Key: Name
          Value: AR-Grafana-Server
  ARServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the AR Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '3000'
          ToPort: '3000'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
